--- a/style.css
+++ b/style.css
@@ -77,7 +77,18 @@ html {
 }
 
 #top .one {
+	color: #fff;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	height: 100vh;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	max-width: 1188px;
 	width: 100%;
 }
@@ -94,6 +105,17 @@ html {
 	top: -10%;
 	width: 120%;
 	z-index: -1;
+}
+
+#top h1 {
+	font-family: "proxima-nova", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+	font-size: 8rem;
+	font-weight: 800;
+	text-transform: uppercase;
+}
+
+#top h1:first-line {
+	color: #919191;
 }
 
 @media only screen and (min-width: 694px) {
