--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ html {
 .site-menu li {
 	float: left;
 	letter-spacing: 1px;
+	line-height: 1;
 	padding: 0 1rem;
 }
 
@@ -48,6 +49,10 @@ html {
 
 .site-menu a {
 	color: #a6a6a6;
+}
+
+.site-menu .dogeared a {
+	color: #981e32;
 }
 
 /* Top section */
