--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ html {
 	color: #919191;
 }
 
+/* Doormat.js */
 .hentry {
 	display: block;
 	position: relative;
@@ -126,6 +127,26 @@ html {
 	box-sizing: border-box;
 	min-height: 100vh;
 	padding-top: 82px;
+}
+
+/* Stories */
+#stories section {
+	padding-top: 10rem;
+}
+#stories .column {
+	width: 50%;
+}
+
+#stories .one,
+#stories .three {
+	padding-left: 2rem;
+	padding-right: 1rem;
+}
+
+#stories .two,
+#stories .four {
+	padding-left: 1rem;
+	padding-right: 2rem;
 }
 
 @media only screen and (min-width: 694px) {
