--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,9 @@ html {
 }
 
 /* Top section */
-#jacket #binder #top {
+#jacket #binder #top section {
 	max-width: none;
 	overflow: hidden;
-	z-index: 2;
 }
 
 #jacket #top .column {
