--- a/style.css
+++ b/style.css
@@ -70,10 +70,9 @@ html {
 }
 
 /* Top section */
-#jacket #binder #top {
+#jacket #binder #top section {
 	max-width: none;
 	overflow: hidden;
-	z-index: 2;
 }
 
 #jacket #top .column {
