--- a/css/style.css
+++ b/css/style.css
@@ -12,19 +12,19 @@ html {
 	z-index: 999;
 }
 
-.desktop-header > div {
-	margin: 0 auto;
-	max-width: 1584px;
-	overflow: auto;
-	position: relative;
-}
-
 .progress {
 	background: #f1f1f1;
 	height: 100%;
 	left: 0;
 	position: absolute;
 	z-index: -1;
+}
+
+.desktop-header nav {
+	margin: 0 auto;
+	max-width: 1584px;
+	overflow: auto;
+	position: relative;
 }
 
 .site-menu {
@@ -59,6 +59,7 @@ html {
 #jacket #binder #top section {
 	max-width: none;
 	overflow: hidden;
+	width: 100%;
 }
 
 #jacket #top .column {
@@ -110,12 +111,13 @@ html {
 }
 
 .section-wrapper {
-	background-color: #fff;
-	max-width: 1188px;
+	left: 0;
+	max-width: none;
 	width: 100%;
 }
 
 .panel {
+	box-shadow: 0 0 16px 0 rgba(0,0,0,0.5);
 	display: none;
 	position: fixed;
 	top: 0;
@@ -124,6 +126,7 @@ html {
 
 .panel section {
 	box-sizing: border-box;
+	margin: 0 auto;
 	min-height: 100vh;
 	padding-top: 50px;
 }
