--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ html {
 }
 
 .site-menu {
+	list-style: none;
+	padding: 0;
+}
+
+nav .site-menu {
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
@@ -46,26 +51,27 @@ html {
 	display: flex;
 	float: right;
 	height: 50px;
-	list-style: none;
-	padding: 0;
 }
 
 .site-menu li {
-	float: left;
 	letter-spacing: 1px;
+}
+
+nav .site-menu li {
+	float: left;
 	line-height: 1;
 	padding: 0 1rem;
 }
 
-.site-menu li + li {
+nav .site-menu li + li {
 	border-left: 1px solid #999;
 }
 
-.site-menu a {
+nav .site-menu a {
 	color: #a6a6a6;
 }
 
-.site-menu .dogeared a {
+nav .site-menu .dogeared a {
 	color: #981e32;
 }
 
@@ -116,11 +122,35 @@ html {
 	font-family: "proxima-nova", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 8rem;
 	font-weight: 800;
+	line-height: 0.85;
 	text-transform: uppercase;
 }
 
 #top h1:first-line {
 	color: #919191;
+}
+
+#top p {
+	letter-spacing: 3px;
+	text-transform: uppercase;
+}
+
+#top .site-menu li {
+	font-size: 1.2em;
+	padding: 0.5em;
+}
+
+#top .site-menu a {
+	color: #fff;
+	display: inline-block;
+	padding: 0.2em 0.5em;
+	-webkit-transition: background .4s, color .4s;
+	transition: background .4s, color .4s;
+}
+
+#top .site-menu a:hover {
+	background-color: #E7E7E7;
+	color: #981e32;
 }
 
 /* Doormat.js */
