--- a/css/style.css
+++ b/css/style.css
@@ -80,11 +80,18 @@ nav .site-menu .dogeared a {
 	height: 100vh;
 	justify-content: center;
 	max-width: 1188px;
+	padding-top: 10rem;
 	width: 100%;
 }
 
 .logged-in #top .one {
 	height: calc(100vh - 32px);
+}
+
+#spirit-mark {
+	position: absolute;
+	top: 2rem;
+	width: 8rem;
 }
 
 #top .image {
