--- a/style.css
+++ b/style.css
@@ -408,5 +408,11 @@ li {
 	#top .site-menu li {
 		font-size: 0.8em;
 	}
+
+	#stories .column {
+		padding-left: 2rem;
+		padding-right: 2rem;
+		width: 100%;
+	}
 }
 /*# sourceMappingURL=style.css.map */
