Add initial handling of desktop and mobile images via shortcode
This requires the image-shortcake plugin from the wp-shortcake
repository.

--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,10 @@ li {
 	padding-right: 2rem;
 }
 
+.mobile-image {
+	display: none;
+}
+
 /* Comment form */
 #comments a {
 	color: rgba(128,128,128,0.6);
@@ -391,4 +395,12 @@ li {
 		padding-right: 2rem;
 		width: 100%;
 	}
+
+    .standard-image {
+	    display: none;
+    }
+
+    .mobile-image {
+	    display: block;
+    }
 }
