Hide columns 3 and 4 and position excerpt after other columns

--- a/css/style.css
+++ b/css/style.css
@@ -396,11 +396,24 @@ li {
 		width: 100%;
 	}
 
-    .standard-image {
-	    display: none;
-    }
+	.story {
+		display: flex;
+		flex-wrap: wrap;
+	}
 
-    .mobile-image {
-	    display: block;
-    }
+	.story .excerpt,
+	.excerpt h2 {
+		order: 1;
+		padding-top: 0;
+	}
+
+	.story .three,
+	.story .four,
+	.standard-image {
+		display: none;
+	}
+
+	.mobile-image {
+		display: block;
+	}
 }
