Change comment list to div output, update style accordingly

--- a/style.css
+++ b/style.css
@@ -422,21 +422,16 @@ li {
 }
 
 /* Comments list */
-.comment-list {
-	padding: 0;
-}
-
-.comment-list li {
+.comment {
 	line-height: 1.6;
-	list-style: none;
-	padding-top: 1rem;
+	padding: .75rem 0;
 }
 
-.comment-list article {
+.comment article {
 	overflow: auto;
 }
 
-.comment-list article footer {
+.comment article footer {
 	border-top: 0;
 	margin: 0;
 	top: 0;
