--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
  Theme Name:     WSU 25 by 2030
- Theme URI:      https://web.wsu.edu
+ Theme URI:      https://wsu.edu/drive-to-25/
  Description:    A Washington State University Spine child theme for the Top 25 initiative
  Author:         WSU University Communications
  Author URI:     https://web.wsu.edu
  Template:       spine
- Version:        0.0.17
+ Version:        0.0.18
 */
 
 html {
