--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ nav .site-menu .active a {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	min-height: 100vh;
 	max-width: 1188px;
 	padding-top: 10rem;
 	width: 100%;
