--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ nav .site-menu .active a {
 	-webkit-box-pack: center;
 	    -ms-flex-pack: center;
 	        justify-content: center;
+	min-height: 100vh;
 	max-width: 1188px;
 	padding-top: 10rem;
 	width: 100%;
