Use `the-evidence`, `spine-mobile`, and `spine-full` classes for targeting
Using `spine-mobile` and `spine-full` reduces the dependency on media queries.
The `spine-mobile` class is leveraged to modify the break points in preparation
for mobile background images for columns.
Adding `the-evidence` as a body class to the markup and using it for targeting
elements should prevent the styles from conflicting with any current pages and
custom styles.

--- a/css/style.css
+++ b/css/style.css
@@ -826,73 +826,78 @@ table.tablepress thead tr th,
 	max-width: none;
 }
 
-.drive-full-width .section-wrapper {
+.the-evidence .section-wrapper {
 	margin: 0 auto;
 	max-width: 1584px; /* Or whatever - this just happens to be the max width of the desktop header */
 	min-height: 0;
 }
 
-.drive-full-width .side-left .two {
+.the-evidence .side-left .two {
 	padding: 0 2rem 4rem;
 }
 
-.drive-full-width #binder .side-left .one {
+.the-evidence .side-left .one {
+	background-position: center;
+	background-repeat: no-repeat;
 	background-size: cover;
-	height: 300px;
+	padding-bottom: 50%;
 }
 
-@media only screen and (min-width: 694px) {
-	.drive-full-width section {
-		margin: 0 auto;
-		position: static;
-	}
+.spine-mobile .the-evidence .fluid .row .column {
+	float: none;
+	width: 100%;
+}
 
-	.drive-full-width .side-left .two {
-		margin-left: 33%;
-	}
+.spine-full .the-evidence .side-left .two {
+	margin-left: 33%;
+}
 
-	.drive-full-width .side-left.reverse .two {
-		float: left;
-		margin-left: 0;
-	}
+.spine-full .the-evidence .side-left .one {
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: auto 100%;
+	height: 100%;
+	left: 0;
+	position: absolute;
+	width: 33%;
+}
 
-	.drive-full-width #binder .side-left .one {
-		background-attachment: fixed;
-		background-repeat: no-repeat;
-		background-size: auto 100%;
-		height: 100%;
-		left: 0;
-		position: absolute;
-		width: 33%;
-	}
+.spine-full .the-evidence section {
+	margin: 0 auto;
+	position: static;
+}
 
-	.drive-full-width #binder .side-left.reverse .one {
-		left: auto;
-		right: 0;
-	}
+.spine-full .the-evidence .side-left.reverse .two {
+	float: left;
+	margin-left: 0;
+}
 
-	.drive-full-width .side-left .one {
-		background-position: calc(50% - (100vw / 3)) center;
-	}
+.spine-full .the-evidence .side-left.reverse .one {
+	left: auto;
+	right: 0;
+}
 
-	.drive-full-width .side-left.reverse .one {
-		background-position: calc(50% + (100vw / 3)) center;
-	}
+.spine-full .the-evidence .side-left .one {
+	background-position: calc(50% - (100vw / 3)) center;
+}
+
+.spine-full .the-evidence .side-left.reverse .one {
+	background-position: calc(50% + (100vw / 3)) center;
 }
 
 @media screen and (min-width: 1189px) {
-	.drive-full-width #binder .side-left .one {
+	.spine-full .the-evidence .fluid .side-left .one {
 		/* Half of the section width minus 17 percent of the max width (since the other column is 67% wide) */
 		width: calc(50% - (1188px * 0.17));
 	}
 }
 
 @media screen and (min-width: 1585px) {
-	.drive-full-width .side-left .one {
+	.spine-full .the-evidence .side-left .one {
 		background-position: calc(50% - (1584px / 3.19)) center;
 	}
 
-	.drive-full-width .side-left.reverse .one {
+	.spine-full .the-evidence .side-left.reverse .one {
 		background-position: calc(50% + (1584px / 3.19)) center;
 	}
 }
