--- a/style.css
+++ b/style.css
@@ -857,7 +857,7 @@ table.tablepress thead tr th,
 	box-sizing: border-box;
     margin: 0 auto;
     max-width: 1188px;
-    padding: 8rem 2rem 2rem;
+    padding: 2rem;
 }
 
 .the-evidence .section-wrapper {
