--- a/style.css
+++ b/style.css
@@ -866,7 +866,11 @@ table.tablepress thead tr th,
 	min-height: 0;
 }
 
-.the-evidence .section-wrapper:nth-of-type(even) {
+.evidence-stories-container {
+	min-height: 100vh;
+}
+
+.evidence-stories-container .section-wrapper:nth-of-type(odd) {
 	background-color: #f3f3f3
 }
 
@@ -971,6 +975,43 @@ table.tablepress thead tr th,
 
 .admin-bar #filter-options.fixed {
 	top: 82px;
+}
+
+/* Loading animation */
+@-webkit-keyframes spin {
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
+@keyframes spin {
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
+
+.the-evidence .loading {
+	-webkit-animation: spin 1s infinite linear;
+	animation: spin 1s infinite linear;
+	border: 0.25rem solid rgba(113,113,113,0.5);
+	border-radius: 50%;
+	border-top-color: #981e32;
+	height: 2rem;
+	margin: 2rem auto;
+	width: 2rem;
+}
+
+.evidence-stories-container .new {
+	display: none;
 }
 
 @media screen and (max-width: 1252px) {
